--- a/CSS/add_products.scss
+++ b/CSS/add_products.scss
@@ -26,7 +26,7 @@ body {
   h2 {
     font-weight: 600;
   }
-    height: 115vh;
+  height: 115vh;
 }
 
 .filter-wrap {
@@ -93,36 +93,36 @@ form {
 }
 
 // General wrapper css
-.form-container{
-    margin-top: 75px;
-    padding: 2em var(--padding-general-sides) 1em var(--padding-general-sides);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 60vw;
-    min-width: 500px;
-    background: white;
-    border-radius: 10px;
-    box-shadow: 10px 10px 15px rgba(0,0,0,0.05);
-    
-    // wrapper of section (h2 + wrap2)
-    .wrapper{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        row-gap: var(--padding-general-sides);
-        border-bottom: 1px lightgray solid;
-        padding: 1em 0;
-        
-        // wrapper of section form fields
-        .wrap2{
-            display: flex;
-            flex-flow: row wrap;
-            width: 70%;
-        }
+.form-container {
+  margin-top: 75px;
+  padding: 2em var(--padding-general-sides) 1em var(--padding-general-sides);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 60vw;
+  min-width: 500px;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.05);
+
+  // wrapper of section (h2 + wrap2)
+  .wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    row-gap: var(--padding-general-sides);
+    border-bottom: 1px lightgray solid;
+    padding: 1em 0;
+
+    // wrapper of section form fields
+    .wrap2 {
+      display: flex;
+      flex-flow: row wrap;
+      width: 70%;
     }
   }
+}
 
 // Title section
 .title-wrap.wrapper {
@@ -331,18 +331,15 @@ form {
       background: #c5c5c5;
       transition: transform 50ms ease;
     }
-        #newCol{
-            font-weight: bold;
-            
-        }
-    
-      
+    #newCol {
+      font-weight: bold;
+    }
+
     button:has(label.clicked) {
       transform: scale(1.02);
       background: #b5b5b5;
       transition: transform 50ms ease;
     }
-    
   }
   .wrap2 {
     display: flex;
