--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -48,8 +48,8 @@ body {
 /* <- welcome -> */
 .welcome-container {
   height: calc(100vh - 60px);
-  // max-height: 1000px;
-  margin-top: 0;
+  
+  margin-top: 2rem;
   margin-bottom: 0;
 }
 /* <- products -> */
