--- a/CSS/nav.scss
+++ b/CSS/nav.scss
@@ -22,15 +22,15 @@ header {
   align-items: center;
 }
 
-.logo-container{
+.logo-container {
   display: flex;
-  gap: 10PX;
+  gap: 10px;
   align-items: center;
 }
 .logo {
   font-size: 1.75rem;
 }
-.logo-art{
+.logo-art {
   height: 30px;
 }
 
@@ -99,5 +99,3 @@ header {
     display: block;
   }
 }
-
-
