--- a/CSS/add_products.scss
+++ b/CSS/add_products.scss
@@ -26,6 +26,7 @@ body {
   h2 {
     font-weight: 600;
   }
+  
 }
 
 .filter-wrap {
@@ -94,7 +95,7 @@ form {
 // General wrapper css
 .form-container {
   margin: calc(var(--nav-bar-height) * 2) 0;
-
+  
   padding: 2em var(--padding-general-sides) 1em var(--padding-general-sides);
   position: absolute;
   top: 0;
@@ -478,7 +479,6 @@ form {
         display: flex;
         flex-flow: row wrap;
         width: 100%;
-        overflow: scroll;
       }
     }
   }
@@ -496,12 +496,11 @@ form {
     }
   }
 
-  .filter-wrap .wrap2 {
+  .filter-wrap .wrap {
     .select_input {
       flex-grow: 1;
     }
   }
-  .
 }
 
 .hidden {
