--- a/CSS/nav.scss
+++ b/CSS/nav.scss
@@ -22,15 +22,15 @@ header {
   align-items: center;
 }
 
-.logo-container {
+.logo-container{
   display: flex;
-  gap: 10px;
+  gap: 10PX;
   align-items: center;
 }
 .logo {
   font-size: 1.75rem;
 }
-.logo-art {
+.logo-art{
   height: 30px;
 }
 
@@ -99,3 +99,5 @@ header {
     display: block;
   }
 }
+
+
