--- a/CSS/nav_admin.scss
+++ b/CSS/nav_admin.scss
@@ -1,45 +1,43 @@
-nav.main {
-  background-color: white;
-  position: fixed;
-  top: 0;
-  z-index: 5;
-  height: var(--nav-bar-height);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-top: 0.4px solid #2d343c;
-  border-bottom: 0.4px solid #2d343c;
-  ul {
-    width: 100vw;
-    padding: 0 var(--padding-general-sides);
+nav.main{
+    background-color: white;
+    position: fixed;
+    z-index: 5;
+    height: var(--nav-bar-height);
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    height: 100%;
-    .rechts {
-      min-width: 20%;
-      display: flex;
-      justify-content: space-between;
-      height: 100%;
+    border-top: .4px solid #2d343c;
+    border-bottom: .4px solid #2d343c;
+    ul{
+        width: 100vw;
+        padding: 0 var(--padding-general-sides);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 100%;
+        .rechts{
+            width: 20%;
+            display: flex;
+            justify-content: space-between;
+            height: 100%;
+        }
+        li{
+            width: fit-content;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            padding: 0 1ch;
+            a{
+                font-weight: 700;
+            }
+            &:hover{
+                background-color: #2d343c;
+                color: white;
+            }
+        }
+        & > li{
+            display: flex;
+            align-items: center;
+        }
     }
-    li {
-      width: max-content;
-      height: 100%;
-      display: flex;
-      align-items: center;
-      padding: 0 1ch;
-      a {
-        font-weight: 700;
-        width: max-content;
-      }
-      &:hover {
-        background-color: #2d343c;
-        color: white;
-      }
-    }
-    & > li {
-      display: flex;
-      align-items: center;
-    }
-  }
 }
