--- a/CSS/login_page.scss
+++ b/CSS/login_page.scss
@@ -33,6 +33,8 @@ body {
 .login-container p {
   text-align: center;
   color: rebeccapurple;
+  margin-top: 1rem;
+  font-weight: bold;
 }
 .login-container form {
   padding: 0 40px 50px 40px;
