--- a/CSS/admin.scss
+++ b/CSS/admin.scss
@@ -137,6 +137,30 @@ main.admin {
           font-weight: bold;
           padding: 10px 10px;
         }
+        th:first-child {
+          width: 5%;
+        }
+        th:nth-child(2) {
+          width: 20%;
+        }
+        th:nth-child(3) {
+          width: 10%;
+        }
+        th:nth-child(4) {
+          width: 15%;
+        }
+        th:nth-child(5) {
+          width: 15%;
+        }
+        th:nth-child(6) {
+          width: 10%;
+        }
+        th:nth-child(7) {
+          width: 5%;
+        }
+        th:nth-child(8) {
+          width: 20%;
+        }
       }
 
       tbody {
