--- a/CSS/welcome.scss
+++ b/CSS/welcome.scss
@@ -62,6 +62,7 @@
   .welcome-container {
     .welcome__text {
       .title {
+        
         font-weight: 700;
         font-size: 3em;
         font-family: "Courier Prime", monospace;
@@ -82,7 +83,7 @@
     width: 0;
   }
   to {
-    width: max-content;
+    width: fit-content;
   }
 }
 
