--- a/CSS/product-card.scss
+++ b/CSS/product-card.scss
@@ -317,6 +317,9 @@ section.card-front {
           box-shadow: none;
           transform: none;
         }
+        .swiper {
+          height: 62%;
+        }
 
         .description {
           padding: 0 10px 12px 10px;
